--- a/hk2-1.html
+++ b/hk2-1.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html>
+  <style>
+.post-body {
+  font-family: Arial, "文泉驛正黑", "WenQuanYi Zen Hei", "儷黑 Pro", "LiHei Pro", "微軟正黑體", "Microsoft JhengHei";
+}
+</style>
 <head>
 <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
 <script src="//s3-ap-northeast-1.amazonaws.com/justfont-user-script/jf-32036.js"></script>  
   <meta charset="utf-8">
-<link rel="stylesheet" type="text/css" href="HK/web2/wk2-2.css">
   <title>icook recipe</title>
 </head>
 <body>
   <!-- background image: http://subtlepatterns.com/patterns/food.png -->
   <article id="recipe">
-    <h1><font　face=".wt005"　color="#cc33ff"　size="7"></font>【學阿基師做菜】❤ 15分鐘快速煮肉燥</h1>
+    <h1>
+      【學阿基師做菜】❤ 15分鐘快速煮肉燥</h1>
     <img alt="【學阿基師做菜】❤ 15分鐘快速煮肉燥" class="main-pic" src="http://cdn0.icook.tw/uploads/recipe/cover/70401/large_ae0feb48ad7ddec5.jpg">
 
       <div class="meta">
@@ -28,7 +33,7 @@
 
         <h3><i class="fa fa-cutlery fa-fw"></i> 所需時間</h3>
         <p>
-          <i class="fa fa-clock-o fa-spin"></i>
+          <i class="fa fa-spinner fa-pulse"></i>
           15 分鐘
         </p>
 
@@ -70,7 +75,7 @@
     <div class="recipe-steps">
       <h3><i class="fa fa-cutlery fa-fw"></i> 作法</h3>
      
-      <ol class="step">
+      <ol class="simple-list ">
         <li>
             先將豬絞肉下鍋乾煸（也就是不加任何油的意思），豬絞肉會先有水分，然後水分排乾變成有一點點豬油煸出，繼續煸炒到鍋底不見任何的油份。
         </li>
@@ -90,7 +95,7 @@
         <p><i class="fa fa-lightbulb-o"></i> Nutella巧克力醬可以用其他牌子巧克力醬替代</p>
 
         <p>貝蒂臉書粉絲專頁，歡迎大家來參觀^_^
-          <br><a class="btn btn-default btn-sm" href="http://www.facebook.com/BettyHou.liveinuk" ><i class="fa fa-facebook-square"></i> </p>
+          <br><a class="btn btn-default btn-sm" href="http://www.facebook.com/BettyHou.liveinuk"rel="nofollow" >http://www.facebook.com/BettyHou.liveinuk<i class="fa fa-facebook-square"></i> </p>
     </div>
       
   </article>
