--- a/hkk.html
+++ b/hkk.html
@@ -4,7 +4,7 @@
 </title>
 
 <link href="hkk.css" rel="stylesheet" type="text/css"/>
-
+  
 <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
 
 <script src="//s3-ap-northeast-1.amazonaws.com/justfont-user-script/jf-32036.js"></script>
@@ -15,6 +15,7 @@
 <body>
 <h1> 【課程】</h1>
   <hr size="5" align="left" noshade color="001B3D">
+<div style="margin:auto">
   <ul class = "box">
     <li>
       <span class="box-name">學年/學期 Academic Year/Semester</span>
@@ -42,6 +43,8 @@
       <span class="box-unit">限學程同學方得修習。</span>
     </li>
   </ul>
+  </div>
+  <div class="after-box"></div>
 <div class="detail">
   <h2><i class="fa fa-rocket"></i> 課程目標 Course objectives</h2>
     <p>
@@ -102,11 +105,11 @@
     <p>  
       <img src="a.jpg">
     <br>學生自評核心能力填答率: 0% (0/40)</br></p>
-</div>
+
 <div class="ability">
   <h2><i class="fa fa-check"></i> 能力項目說明：</h2>
       <ol class="simple-list ">
-      <li>具備發現與解決問題之能力	
+      <li>具備發現與解決問題之能力  
       </li>
       <li>具備敘事與美學能力
       </li>
@@ -125,6 +128,6 @@
       <img src="b.jpg">
     </p>
     <a href="pro1.html"><i class="fa fa-hand-o-right"></i>表單 </a>
-
+</div>
 </body>
 </html>
