--- a/pro.html
+++ b/pro.html
@@ -7,10 +7,11 @@
   <h1 id=a>Survey</h1>
     <img src="https://s-media-cache-ak0.pinimg.com/736x/5a/09/6a/5a096ada88c8065b3c5d64ada0333519.jpg" class="pinImage" >
 <div>
-  <label for="name">Your name</label>
-  <input name="name" type="text" id="name" tabindex="1" placeholder="Your name" required="required" />
+  <label for="name" class="Q"> Your name</label>
+  <input name="name" type="text" id="name" tabindex="1" placeholder="Your name" required="required" /> <i class="fa fa-pencil"></i>
 </div>
-<div>What is your gender？
+<div>
+  <label class="Q">What is your gender？</label>
   <ul>
     <img src="https://s-media-cache-ak0.pinimg.com/736x/5c/15/08/5c1508ece01f9a3aa8459af56b23a5a1.jpg" class="Image1" >
     <input type="radio" name="gender" value="男"> 
@@ -21,10 +22,11 @@
     <label>Female</label>
   <div class="afterImage1"></div>
 <p>
-  <label for="day">Birthday</label>
+  <label for="day" class="Q">Birthday</label>
   <i class="fa fa-table"></i> <input type="text" name="b" id="day" placeholder="Birthday" required="required"/>
 </p>
-<p>Which form of transport do you use?</p>
+<p>
+  <label class="Q"><i class="fa fa-space-shuttle fa-2x"></i> Which form of transport do you use?</label>
   <div class="transport">    
       <li><a class="list-group-item" href="#">
         <i class="fa fa-paw fa-5x"></i>
@@ -59,7 +61,9 @@
         <label>Airplane</label>
       </a></li>  
   </div>
-<p>What is the highest level of education you have completed?
+</p>
+<p>
+  <label class="Q"><i class="fa fa-graduation-cap fa-2x"></i> What is the highest level of education you have completed? </label>
   <ul class="edu">
    <li type="none"><a class="pure-button pure-button-active" href="#">
     <input type="radio" name="edu" value="小">
@@ -99,7 +103,8 @@
    </li></a>
   </ul>
 
-<p>Which industry do you work in or are most involved with?
+<p>
+  <label class="Q">Which industry do you work in or are most involved with?</label>
   <select>
     <option>Accounting</option>
     <option>Writing & Editing </option>
@@ -112,15 +117,15 @@
   </select>
 </p>
 <p>
-  <label for="what">Your phone#</label>
+  <label for="what" class="Q">Your phone <i class="fa fa-mobile"></i></label>
   <input type="number" placeholder="Phone" required="required"/>
 </p>
 <p>
-  <label for="what">Email address</label>
+  <label for="what" class="Q">Email address</label>
   <input type="email" name="email" placeholder="Email" required="required"/>
 </p>
 <p>
-  <label for="what">Personal website</label>
+  <label for="what" class="Q">Personal website</label>
   <input type="text" name="w" placeholder="https://" required="required"/>
 </p>
 <input type="submit" value="送出" >
