--- a/pro.html
+++ b/pro.html
@@ -2,68 +2,67 @@
   <link rel="stylesheet" href="pro.css">
   <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-<div style="text-align:center;" >  
-<div style="width:50%;height:20px;margin:0 auto;">
+<div style="width:60%;margin:0 auto; ">
   <h1 id=a>Survey</h1>
     <img src="https://s-media-cache-ak0.pinimg.com/736x/5a/09/6a/5a096ada88c8065b3c5d64ada0333519.jpg" class="pinImage" >
 <div>
   <label for="name" class="Q"> Your name</label>
   <input name="name" type="text" id="name" tabindex="1" placeholder="Your name" required="required" /> <i class="fa fa-pencil"></i>
 </div>
-<div>
+
   <label class="Q">What is your gender？</label>
-  <ul>
+  <p>  
     <img src="https://s-media-cache-ak0.pinimg.com/736x/5c/15/08/5c1508ece01f9a3aa8459af56b23a5a1.jpg" class="Image1" >
     <input type="radio" name="gender" value="男"> 
-    <label >Male</label></br>
-  <div class="afterImage1"></div>
+    <label >Male</label>
     <img class="Image1"  src="http://elite.tut.edu.tw/web2.0/gallery/gallery2/main.php?g2_view=core.DownloadItem&amp;g2_itemId=87497&amp;g2_serialNumber=2" >
     <input type="radio" name="gender" value="女">
     <label>Female</label>
+  </p>
   <div class="afterImage1"></div>
 <p>
   <label for="day" class="Q">Birthday</label>
   <i class="fa fa-table"></i> <input type="text" name="b" id="day" placeholder="Birthday" required="required"/>
 </p>
 <p>
-  <label class="Q"><i class="fa fa-space-shuttle fa-2x"></i> Which form of transport do you use?</label>
-  <div class="transport">    
+  <label class="Q"></i> Which form of transport do you use?</label>
+  <ul class="transport">    
       <li><a class="list-group-item" href="#">
         <i class="fa fa-paw fa-5x"></i>
-      <label>Walking</label>
+      <br><label>Walking&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
       </a></li>
       <li><a class="list-group-item" href="#">
         <i class="fa fa-bicycle fa-5x"></i>
-        <label>Bike</label>
+        <br><label>Bike&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
       </a></li>
       <li><a class="list-group-item" href="#">
         <i class="fa fa-motorcycle fa-5x"></i>
-        <label>Motorcycle</label>
+        <br><label>Motorcycle&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
       </a></li>
       <li><a class="list-group-item" href="#">
         <i class="fa fa-car fa-5x"></i>
-        <label>Car</label>
+        <br><label>Car&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
       </a></li>
       <li><a class="list-group-item" href="#">
         <i class="fa fa-bus fa-5x"></i>
-        <label>Bus</label>
+        <br><label>Bus&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
       </a></li>
       <li><a class="list-group-item" href="#">
         <i class="fa fa-subway fa-5x"></i>
-        <label>Metro</label>
+        <br><label>Metro&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
       </a></li>
       <li><a class="list-group-item" href="#">
         <i class="fa fa-train fa-5x"></i>
-        <label >Train</label>
+        <br ><label >Train&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
       </a></li>
       <li><a class="list-group-item" href="#">
         <i class="fa fa-plane fa-5x"></i>
-        <label>Airplane</label>
+        <br ><label>Airplane&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
       </a></li>  
-  </div>
+  </ul>
 </p>
 <p>
-  <label class="Q"><i class="fa fa-graduation-cap fa-2x"></i> What is the highest level of education you have completed? </label>
+  <label class="Q"> What is the highest level of education you have completed? </label>
   <ul class="edu">
    <li type="none"><a class="pure-button pure-button-active" href="#">
     <input type="radio" name="edu" value="小">
@@ -105,7 +104,7 @@
 
 <p>
   <label class="Q">Which industry do you work in or are most involved with?</label>
-  <select>
+  <br><select>
     <option>Accounting</option>
     <option>Writing & Editing </option>
     <option>Animation </option>
